[project]
name = "discord-archiver-media-archiver"
version = "1.0.0"
description = "Simple program to download and replace Discord CDN weblinks from the output of Discord Archiver with hard, on drive path links to maintain media access after the CDN links expire. Has additional functionality for downloading gifs from Tenor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["media_archiver.py"]

[project.scripts]
da-ma = "cdn_archiver:main"

[project.urls]
Homepage = "https://pypi.org/project/discord-archiver-media-archiver/"
Repository = "https://github.com/poliwhirl555/discord-archiver-media-archiver"
Issues = "https://github.com/poliwhirl555/discord-archiver-media-archiver/issues"